added some animations and interactions

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,4 +75,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/UnrealPlayground.SBarell",NewName="/Script/UnrealPlayground.SBarrel")
++PropertyRedirects=(OldName="/Script/UnrealPlayground.SCharacter.AnimationMontage",NewName="/Script/UnrealPlayground.SCharacter.AttackAnimation")
 
