assignment 2 refactored and fully finished

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,4 +78,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +PropertyRedirects=(OldName="/Script/UnrealPlayground.SCharacter.AnimationMontage",NewName="/Script/UnrealPlayground.SCharacter.AttackAnimation")
 +PropertyRedirects=(OldName="/Script/UnrealPlayground.SCharacter.ProjectileClass",NewName="/Script/UnrealPlayground.SCharacter.PrimaryProjectileClass")
 +PropertyRedirects=(OldName="/Script/UnrealPlayground.SCharacter.BlackHoleProjectileClass",NewName="/Script/UnrealPlayground.SCharacter.SecondaryProjectileClass")
++PropertyRedirects=(OldName="/Script/UnrealPlayground.STeleportProjectile.PortalExitEffectComp",NewName="/Script/UnrealPlayground.STeleportProjectile.PortalExitEffect")
++PropertyRedirects=(OldName="/Script/UnrealPlayground.STeleportProjectile.PortalEnterEffectComp",NewName="/Script/UnrealPlayground.STeleportProjectile.PortalEnterEffect")
 
