--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/UnrealPlayground/Maps/StarterMap.StarterMap
 EditorStartupMap=/Game/UnrealPlayground/Maps/StarterMap.StarterMap
+GlobalDefaultGameMode=/Game/UnrealPlayground/GameModeBP.GameModeBP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
