--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,4 +81,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +PropertyRedirects=(OldName="/Script/UnrealPlayground.SCharacter.BlackHoleProjectileClass",NewName="/Script/UnrealPlayground.SCharacter.SecondaryProjectileClass")
 +PropertyRedirects=(OldName="/Script/UnrealPlayground.STeleportProjectile.PortalExitEffectComp",NewName="/Script/UnrealPlayground.STeleportProjectile.PortalExitEffect")
 +PropertyRedirects=(OldName="/Script/UnrealPlayground.STeleportProjectile.PortalEnterEffectComp",NewName="/Script/UnrealPlayground.STeleportProjectile.PortalEnterEffect")
++PropertyRedirects=(OldName="/Script/UnrealPlayground.SGameModeBase.MinionKillCreditsValue",NewName="/Script/UnrealPlayground.SGameModeBase.MinionKillCreditsChange")
++PropertyRedirects=(OldName="/Script/UnrealPlayground.SCreditsItem.RefillTimeout",NewName="/Script/UnrealPlayground.SCreditsItem.RespawnTimeout")
 
