--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/UnrealPlayground/Maps/StarterMap.StarterMap
+GameDefaultMap=/Game/UnrealPlayground/Maps/MainMenu_Entry.MainMenu_Entry
 EditorStartupMap=/Game/UnrealPlayground/Maps/StarterMap.StarterMap
 GlobalDefaultGameMode=/Game/UnrealPlayground/GameModeBP.GameModeBP_C
 
